<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ip"
    tools:context="com.example.yanirayanes.calculadoraipconmascara.MainActivity"
    android:orientation="horizontal">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="12dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="12dp"
        >

        <EditText
            android:id="@+id/ipcompleta"
            android:layout_weight="1"
            android:textAlignment="center"
            android:maxLength="15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:digits="0123456789."
            android:hint="@string/edit_text_hint_ip"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/colorTexto"
            android:text="@string/textview_slash"/>

        <EditText
            android:id="@+id/mascara"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:maxLength="2"
            android:hint="@string/edit_text_hint_mask"
            android:inputType="number"
            android:textAlignment="center"/>

    </LinearLayout>
    
    // Desde aqui desaparecieron :(
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:text="@string/TextId"
        android:textColor="@color/colorTexto"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        />
    <EditText
        android:id="@+id/netid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:enabled="false"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:text="@string/text_view_broad"
        android:textColor="@color/colorTexto"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        />
    <EditText
        android:id="@+id/edit_text_broad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:enabled="false"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp"
        android:baselineAligned="false"
        android:orientation="horizontal"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_view_canh"
                android:textSize="24sp"
                android:textColor="@color/colorTexto"/>
            <EditText
                android:id="@+id/edit_text_canip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_view_netp"
                android:textSize="24sp"
                android:textColor="@color/colorTexto"/>
            <EditText
                android:id="@+id/edit_text_netp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_text_hostp"
            android:textSize="20sp"
            android:textColor="@color/colorTexto"/>
        <EditText
            android:id="@+id/host"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/botonparacalcular"
            android:onClick="calcular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/botoncalc_text"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            />

        <Button
            android:id="@+id/botonpararesetear"
            android:onClick="reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/botonres_text"
            />

    </LinearLayout>

</LinearLayout>